# deCarriere

./: .gitignore  CV-2024.tex  Peter Bowman Cover Letter.tex  Peter Bowman Resume.tex  README.md  Resume.html  cover_letter_template.tex  coverlettertemplate.html  pyproject.toml  style.css
Data/: Pikpok.yml  SpendNetwork.yml  contacts.yml
Data/Events/: Heineken.yml  Pikpok.yml  SpendNetwork.yml  Westpac.yml
Documents/: Peter Bowman Cover Letter.tex  Peter Bowman Resume.tex
docs/: diary.rst  roadmap.rst
docs/LADR/: 0.purpose.md
src/: content_loader.py  content_writer.py  cust_types.py  definitions.py  main.py  types.py
templates/: contact_section.tex  contactsection.tex  cvEvent.tex  cvSection.tex  cvbody.tex  metadata.tex  resume_body.tex  resume_event.tex  resume_section.tex
